Updated CrossOrigin Rules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=challenge
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+front_end_url=${FRONT_END_URL}
 
 spring.jpa.hibernate.ddl-auto=update
